--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,15 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x"
+        "illuminate/support": "4.0.x",
+        "rhumsaa/uuid": "2.0.*"
     },
     "autoload": {
         "classmap": [
             "src/migrations"
+        ],
+        "files": [
+            "src/Wingsline/Menu/helpers.php"
         ],
         "psr-0": {
             "Wingsline\\Menu": "src/"
