--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.0.x",
-        "rhumsaa/uuid": "2.0.*"
+        "rhumsaa/uuid": "2.0.*",
+        "dflydev/markdown": "1.0.*@dev"
     },
     "autoload": {
         "classmap": [
-            "src/migrations"
+            "src/migrations",
+            "src/controllers"
         ],
         "files": [
             "src/Wingsline/Menu/helpers.php"
